--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,11 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>404 Page not found | Tommy的博客</title>
+<title>Abouts | Tommy的博客</title>
 <meta name=keywords content>
-<meta name=description content="ExampleSite description">
+<meta name=description content="Abouts - Tommy的博客">
 <meta name=author content="Me">
-<link rel=canonical href=https://hentaitommy.github.io/404.html>
+<link rel=canonical href=https://hentaitommy.github.io/about/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
@@ -20,17 +20,19 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
+<link rel=alternate type=application/rss+xml href=https://hentaitommy.github.io/about/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="404 Page not found">
+</noscript><meta property="og:title" content="Abouts">
 <meta property="og:description" content="ExampleSite description">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://hentaitommy.github.io/404.html"><meta property="og:image" content="https://hentaitommy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
+<meta property="og:url" content="https://hentaitommy.github.io/about/"><meta property="og:image" content="https://hentaitommy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://hentaitommy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content="404 Page not found">
+<meta name=twitter:title content="Abouts">
 <meta name=twitter:description content="ExampleSite description">
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Abouts","item":"https://hentaitommy.github.io/about/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -63,7 +65,20 @@
 </nav>
 </header>
 <main class=main>
-<div class=not-found>404</div>
+<header class=page-header><div class=breadcrumbs><a href=https://hentaitommy.github.io/>Home</a></div>
+<h1>Abouts</h1>
+</header>
+<article class=post-entry>
+<header class=entry-header>
+<h2>博客搭建sdasd<sup><span class=entry-isdraft>&nbsp;&nbsp;[draft]</span></sup>
+</h2>
+</header>
+<section class=entry-content>
+<p>cesdsfsdf测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</p>
+</section>
+<footer class=entry-footer>October 20, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to 博客搭建sdasd" href=https://hentaitommy.github.io/about/%E6%B5%8B%E8%AF%95/></a>
+</article>
 </main>
 <footer class=footer>
 <span>&copy; 2021 <a href=https://hentaitommy.github.io/>Tommy的博客</a></span>
