--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Tommy的博客</title>
+<title>Tommy's blog</title>
 <meta name=keywords content="Blog,Portfolio,PaperMod">
 <meta name=description content="ExampleSite description">
 <meta name=author content="Me">
@@ -11,7 +11,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.4d4005f4037451e33ad8e945db0ecc8116437f4b5eafd832274e5390a4b6d70f.css integrity="sha256-TUAF9AN0UeM62OlF2w7MgRZDf0ter9gyJ05TkKS21w8=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://hentaitommy.github.io/%3Clink%20/%20abs%20url%3E>
 <link rel=icon type=image/png sizes=16x16 href=https://hentaitommy.github.io/%3Clink%20/%20abs%20url%3E>
 <link rel=icon type=image/png sizes=32x32 href=https://hentaitommy.github.io/%3Clink%20/%20abs%20url%3E>
@@ -25,22 +25,22 @@
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content>
+</noscript><meta property="og:title" content="Tommy's blog">
 <meta property="og:description" content="ExampleSite description">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://hentaitommy.github.io/"><meta property="og:image" content="https://hentaitommy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://hentaitommy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content>
+<meta name=twitter:title content="Tommy's blog">
 <meta name=twitter:description content="ExampleSite description">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Tommy的博客","url":"https://hentaitommy.github.io/","description":"ExampleSite description","thumbnailUrl":"https://hentaitommy.github.io/%3Clink%20/%20abs%20url%3E","sameAs":["https://twitter.com/","https://stackoverflow.com","https://github.com/"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Tommy's blog","url":"https://hentaitommy.github.io/","description":"ExampleSite description","thumbnailUrl":"https://hentaitommy.github.io/%3Clink%20/%20abs%20url%3E","sameAs":["mailto:hentaitommy@qq.com","https://github.com/hentaitommy","https://steamcommunity.com/profiles/76561198095373325/"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://hentaitommy.github.io/ accesskey=h title="Home (Alt + H)">Home</a>
+<a href=https://hentaitommy.github.io/ accesskey=h title="Tommy's blog (Alt + H)">Tommy's blog</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -48,26 +48,15 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://hentaitommy.github.io/categories/ title=categories>
-<span>categories</span>
-</a>
-</li>
-<li>
-<a href=https://hentaitommy.github.io/tags/ title=tags>
-<span>tags</span>
-</a>
-</li>
-<li>
-<a href=https://example.org title=example.org>
-<span>example.org</span>
+<a href=https://hentaitommy.github.io/search/ title>
+<span> <div style=position:relative><svg fill="currentcolor" height="24" width="24" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" style="position:relative;top:3px"><path d="M469.333333 768c-166.4.0-298.666667-132.266667-298.666666-298.666667s132.266667-298.666667 298.666666-298.666666S768 302.933334 768 469.333333 635.733333 768 469.333333 768zm0-85.333333c119.466667.0 213.333333-93.866667 213.333334-213.333334S588.8 256 469.333333 256 256 349.866667 256 469.333333s93.866667 213.333333 213.333333 213.333334zm251.733334.0 119.466666 119.466666L780.8 861.866667 661.333333 742.4l59.733334-59.733333z" p-id="3721"/></svg>
+</div>
+</span>
 </a>
 </li>
 </ul>
 </nav>
-</header>
-<main class=main>
-<div class=post-content><p>dsfsdfsdfsdf111</p>
-</div>
+</header><main class=main>
 <article class="first-entry home-info">
 <header class=entry-header>
 <h1>Hi there 👋</h1>
@@ -77,54 +66,18 @@
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
-<a href=https://twitter.com/ target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg>
+<a href=mailto:hentaitommy@qq.com target=_blank rel="noopener noreferrer me" title=Email><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
 </a>
-<a href=https://stackoverflow.com target=_blank rel="noopener noreferrer me" title=Stackoverflow><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.913 16.041v6.848h17.599v-6.848M7.16 18.696h8.925M7.65 13.937l8.675 1.8M9.214 9.124l8.058 3.758M12.086 4.65l6.849 5.66M15.774 1.111l5.313 7.162"/></svg>
+<a href=https://github.com/hentaitommy target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
-<a href=https://github.com/ target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
+<a href=https://steamcommunity.com/profiles/76561198095373325/ target=_blank rel="noopener noreferrer me" title=Steam><svg fill="currentcolor" class="icon" width="200" height="199.8" viewBox="0 0 1025 1024" xmlns="http://www.w3.org/2000/svg"><path d="M704.035701 288c0-53.024 42.976-96 96-96s96 42.976 96 96-42.976 96-96 96-96-42.976-96-96zm254.4-158.4c-87.488-87.488-229.312-87.488-316.8.0-35.584 35.584-56.672 80.16-63.328 126.4l-204.704 310.24c-27.52 1.408-54.784 8.416-79.968 21.024l-157.888-123.424c-36.544-28.576-89.344-22.112-117.92 14.432s-22.112 89.344 14.464 117.92l155.936 121.888c-16.96 66.784.672 140.544 52.928 192.8 78.912 78.912 206.848 78.912 285.728.0 48.48-48.48 67.136-115.424 56.064-178.176l249.056-222.976c46.24-6.624 90.816-27.744 126.4-63.328 87.488-87.488 87.488-229.312.0-316.768zm-574.4 773.088c-74.4.0-134.688-60.288-134.688-134.688.0-.704.032-1.408.064-2.112l66.912 52.288c15.36 12 33.568 17.824 51.68 17.824 24.96.0 49.664-11.072 66.24-32.288 28.576-36.544 22.112-89.344-14.432-117.92l-63.488-49.632c8.96-1.888 18.24-2.88 27.776-2.88 74.4.0 134.688 60.288 134.688 134.688s-60.32 134.688-134.688 134.688zm416-454.688c-88.352.0-160-71.648-160-160s71.648-160 160-160 160 71.648 160 160-71.648 160-160 160z"/></svg>
 </a>
 </div>
 </footer>
 </article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>博客搭建<sup><span class=entry-isdraft>&nbsp;&nbsp;[draft]</span></sup>
-</h2>
-</header>
-<section class=entry-content>
-<p>技术选型
-Hexo,Hugo,Vuepress,jekyll111</p>
-</section>
-<footer class=entry-footer>October 20, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to 博客搭建" href=https://hentaitommy.github.io/posts/%E6%B5%8B%E8%AF%95%E5%88%86%E7%B1%BB1/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>First ArtSDSDSicle<sup><span class=entry-isdraft>&nbsp;&nbsp;[draft]</span></sup>
-</h2>
-</header>
-<section class=entry-content>
-<p>引言 在最近编辑器新增的推荐标签功能中，前端需要提取文章的一部分发送到后台进行分析。
-这个时候，遇到一个问题。有的时候提取部分只发生了很小的改动，如果再次发送提取部分到后台，就会让后台的预加载失效。
-如果，我们能在提取部分发送给后台之前，先衡量提取部分的改动大小，只在提取部分的改动大于一定程度时才向后台发送提取部分，就可以提高后台预加载的命中率。在这里我们就要引入文本比较算法了。1</p>
-</section>
-<footer class=entry-footer>October 20, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to First ArtSDSDSicle" href=https://hentaitommy.github.io/posts/%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%AF%94%E5%AF%B9%E7%AE%97%E6%B3%95/%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%AF%94%E5%AF%B9%E7%AE%97%E6%B3%95/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>My 1st post
-</h2>
-</header>
-<section class=entry-content>
-<p></p>
-</section>
-<footer class=entry-footer>September 15, 2020&nbsp;·&nbsp;0 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to My 1st post" href=https://hentaitommy.github.io/posts/testpost/></a>
-</article>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://hentaitommy.github.io/>Tommy的博客</a></span>
+<span>&copy; 2021 <a href=https://hentaitommy.github.io/>Tommy's blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
@@ -135,6 +88,6 @@ Powered by
 </a>
 <script>let menu=document.getElementById('menu');menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)},document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
 <script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
-<script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
+<script>document.getElementById("theme-toggle").addEventListener("click",()=>{var b,a;document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light'),b={type:'set-theme',theme:'github-light'},a=document.querySelector('iframe'),a.contentWindow.postMessage(b,new URL(a.src).origin)):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'),b={type:'set-theme',theme:'github-dark'},a=document.querySelector('iframe'),a.contentWindow.postMessage(b,new URL(a.src).origin))})</script>
 </body>
 </html>
